--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "Task2"]
 	path = Task2
 	url = https://github.com/Manuu2211/Task2.git
+[submodule "Task3"]
+	path = Task3
+	url = https://github.com/Manuu2211/Task3.git
